test/ui/src/compile_fail/std/emit_props_duplicate_interpolated_attr.rs
fn main() {
    emit::emit!("template {#[emit::optional] x}", x: 42);
}
